# src/main/java/ProjektBus/Server/utils/ApplicationError.java
@@ -2,7 +2,6 @@ package ProjektBus.Server.utils;
 
 import lombok.AllArgsConstructor;
 import lombok.Getter;
-import org.springframework.http.HttpStatus;
 
 import java.util.Collections;
 import java.util.List;
@@ -11,11 +10,13 @@ import java.util.List;
 @Getter
 public class ApplicationError {
 
-    private HttpStatus status;
     private List<String> errors;
 
-    public ApplicationError(HttpStatus status, String error) {
-        this.status = status;
+    public ApplicationError( String error) {
         this.errors = Collections.singletonList(error);
+    }
+
+    public ApplicationError(ErrorCodes errorCodes) {
+        this.errors = Collections.singletonList(errorCodes.getResponse());
     }
 }
